fixed lists alignment in side panel

--- a/modules.less
+++ b/modules.less
@@ -1137,6 +1137,17 @@ a{
 	.toggle{
 		width: 300px;
 		padding: 20px;
+		.row{
+			min-height: 0;
+		}
+		ul{
+			margin: 0;
+			padding: 0;
+			li{
+				list-style-type: none;
+				margin-left: 5px;
+			}
+		}
 	}
 	width: 300px;
 	position: absolute;
@@ -4393,6 +4404,60 @@ input-password{
 	margin-top: -80px;
 	padding-top: 80px;
 	display: block;
+}
+
+nav.double-content-stamps{
+	text-align: center;
+	article::first-child{
+		margin-right: 0;
+	}
+	article{
+		width: 330px;
+		display: inline-block;
+		text-align: left;
+		padding: 0;
+		margin-right: 25px;
+		margin-bottom: 20px;
+		position: relative;
+		.illustration{
+			float: left;
+			width: 180px;
+			height: 120px;
+			img{
+				width: 180px;
+				height: 120px;
+			}
+		}
+		.vertical-content{
+			float: right;
+			width: 150px;
+			height: 240px;
+			padding: 10px;
+			box-sizing: border-box;
+			ul{
+				padding: 0;
+				li{
+					list-style-type: none;
+					a{
+						display: block;
+						margin-bottom: 3px;
+					}
+				}
+			}
+		}
+		.horizontal-content{
+			float: left;
+			width: 180px;
+			height: 120px;
+			padding: 10px;
+			box-sizing: border-box;
+			label{
+				position: absolute;
+				bottom: 10px;
+				left: 10px;
+			}
+		}
+	}
 }
 
 side-panel{
